package usantatecla.klondike.types;

public enum Color {

    BLACK,
    RED;

}