package usantatecla.klondike.types;

public enum StateValue {
    INITIAL,
    IN_GAME,
    FINAL,
    EXIT
}

